<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.adrian.primeraapp.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="142dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="59dp"
        android:gravity="right"
        android:text="@string/strtxtTextoInf1"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edtxtInput"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/edtxtInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_ingreso_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_resul"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.162" />

    <EditText
        android:id="@+id/edtxt_resul"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_limpiar"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:inputType="none"
        android:text=""
        android:textSize="21sp"
        android:longClickable="false"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintLeft_toRightOf="@+id/txt_Resul"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btn_calc"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="57dp"
        android:layout_marginTop="63dp"
        android:onClick="limpiaCampos"
        android:text="@string/strbtnLimpiar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxtInput"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtInput"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="63dp"
        android:background="@color/mygreen_btn_color"
        android:onClick="calculaResultado"
        android:text="@string/strbtnCalcular"
        app:layout_constraintHorizontal_bias="0.57"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_limpiar"
        app:layout_constraintTop_toBottomOf="@+id/edtxtInput"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtIndAct1"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="1dp"
        android:gravity="right"
        android:text="@string/strtxtTextoIndicActiv1"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="21sp"
        android:typeface="normal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edtxtInput"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
    <!-- android:textAlignment="textStart"  (Android lo marcó como error de inconsistencia) -->

    <TextView
        android:id="@+id/txt_Resul"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="right"
        android:text="@string/strtxtTitResul"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/edtxtInput"
        tools:ignore="RtlHardcoded"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/txtTitResul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="198dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="right"
        android:text="@string/strtxtResul"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="@+id/txt_Resul"
        app:layout_constraintRight_toLeftOf="@+id/btn_limpiar"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/btn_Go2_Adv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:onClick="llama_actAdv"
        android:text="@string/strbtnGo2Adv"
        android:textColor="?android:attr/colorForegroundInverse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_resul"
        app:layout_constraintVertical_bias="0.866" />

</android.support.constraint.ConstraintLayout>
